# Homework-Manager-App

./: .gitattributes  .gitignore  LICENSE  README.md  compile.sh
src/: App.cpp  App.hpp  CMakeLists.txt  core.hpp  main.cpp
src/Assignment/: Assignment.cpp  Assignment.hpp
src/Assignments/: Assignment.cpp  Assignment.hpp
src/Classes/: Class.cpp  Class.hpp
src/Commands/: Add.cpp  Add.hpp  Commands.cpp  Commands.hpp  Remove.cpp  Remove.hpp  Show.cpp
src/Components/: Assignment.cpp  Assignment.hpp
src/General/: Commands.cpp  Commands.hpp  General.cpp  General.hpp  Structures.cpp  Structures.hpp
src/Operations/: Add.cpp  Add.hpp  Show.cpp  Show.hpp
src/States/: MainMenu.cpp  MainMenu.hpp  State.cpp  State.hpp
src/Trackers/: AssignmentTracker.cpp  AssignmentTracker.hpp  ClassTracker.cpp  ClassTracker.hpp  Tracker.hpp
